[package]
name = "tiktoken"
version = "0.3.0"
edition = "2021"
rust-version = "1.57.0"
publish = false

[lib]
name = "tiktoken"
# crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3 = { version = "0.17.3" }

# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
anyhow = "1.0.69"

